# cplusplus-snippets

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  interface.cpp  map.cpp  map2.cpp  map3.cpp  memory.cpp  numeros.cpp  sizeof.cpp
src/: CMakeLists.txt  ascii.cpp  bind.cpp  bool.cpp  char.cpp  clock.cpp  double.cpp  endianness.cpp  exception_div_0.cpp  interface.cpp  ip-address-int.cpp  istream-get.cpp  istream::get.cpp  list.cpp  list_and_maps.cpp  loops.cpp  map.cpp  map2.cpp  map3.cpp  map4_copy.cpp  memory.cpp  memoryleak.cpp  namespace.cpp  null.cpp  numbers.cpp  output.cpp  pointers.cpp  sizeof.cpp  sizes.cpp  sort.cpp  strings.cpp  switch_case.cpp  template.cpp  time.cpp  time_conversion.cpp  vector.cpp  what.cpp
src/algorithms/init-and-transform/: CMakeLists.txt  main.cpp
src/algorithms/init-and-transform-paralell-execution/: CMakeLists.txt  main.cpp
src/bind/: CMakeLists.txt  bind.cpp
src/bind1st_2nd/: CMakeLists.txt  bind.cpp
src/bits/: CMakeLists.txt  bitset-memcpy-big-little-endian.cpp  main.cpp  ones-complement.cpp  packing-unpacking-float.cpp  unsignedshort-to-2-bytes.cpp
src/bits/pack-unpack-data/: CMakeLists.txt  Data.cpp  Data.h  DataMessage.h  main.cpp
src/boost/: CMakeLists.txt
src/boost/asio/timer.1/: CMakeLists.txt  Makefile  main.cpp
src/boost/asio/timer.2/: CMakeLists.txt  Makefile  main.cpp
src/boost/asio/timer.3/: CMakeLists.txt  Makefile  main.cpp
src/boost/bind/example1/: CMakeLists.txt  Makefile  main.cpp
src/boost/bind/example2/: CMakeLists.txt  Makefile  main.cpp  mystatus.h
src/boost/boost.units/: CMakeLists.txt  Makefile  readme.txt  units.cpp
src/boost/circular_buffer/: CMakeLists.txt  main.cpp
src/boost/multi_index/: CMakeLists.txt  Makefile  multi_index.cpp
src/boost/program_options/: CMakeLists.txt  main.cpp
src/boost/ptr_vector/: CMakeLists.txt  main.cpp
src/c11-callbacks/: CMakeLists.txt
src/c11-callbacks/01_functions/: CMakeLists.txt
src/c11-callbacks/02_members/: CMakeLists.txt  main.cpp  publisher.h  subscriber.cpp
src/c11-callbacks/03_templates/: CMakeLists.txt  main.cpp
src/c11-decltype/: CMakeLists.txt  main.cpp
src/c11-final-specifier/: CMakeLists.txt  main.cpp
src/c11-static-assert/: CMakeLists.txt  main.cpp
src/c11-std-async/: CMakeLists.txt  main.cpp
src/c11-std-shuffle/: CMakeLists.txt  main.cpp
src/c11-variadic-templates/: CMakeLists.txt  main.cpp
src/c17-filesystem/: CMakeLists.txt  inputfile.txt  main.cpp
src/c17-optional/: CMakeLists.txt  main.cpp
src/c17-return-several-values-and-structured-bindings/: CMakeLists.txt  main.cpp
src/c17-std-any/: CMakeLists.txt  main.cpp
src/c17-std-variant/: CMakeLists.txt  main.cpp
src/c17-string-view/: CMakeLists.txt  main.cpp
src/c20-concepts/: CMakeLists.txt  main.cpp
src/c20-std-execution/: CMakeLists.txt  main.cpp
src/c20-std-format/: CMakeLists.txt  main.cpp
src/callbacks/: CMakeLists.txt  main.cpp  publisher.cpp  publisher.h  subscriber.cpp  subscriber.h
src/callbacks-c11/02_members/: main.cpp
src/callbacks-c11/03_templates/: CMakeLists.txt
src/callbacks/01_functions/: CMakeLists.txt  main.cpp
src/callbacks/02_pointer_to_member_function/: CMakeLists.txt  main.cpp
src/callbacks/03_members/: CMakeLists.txt  main.cpp  publisher.cpp  publisher.h  subscriber.cpp  subscriber.h
src/callbacks_c++11/: CMakeLists.txt  main.cpp  publisher.cpp  publisher.h  subscriber.cpp  subscriber.h
src/callbacks_c++11/01_functions/: CMakeLists.txt  main.cpp
src/callbacks_c++11/01_simple/: main.cpp
src/callbacks_c++11/02_members/: CMakeLists.txt  main.cpp  publisher.cpp  publisher.h  subscriber.cpp  subscriber.h
src/callbacks_c++11/03_templates/: CMakeLists.txt  main.cpp
src/chrono/: CMakeLists.txt  chrono.cpp
src/chrono-2/: CMakeLists.txt  chrono.cpp
src/chrono-3/: CMakeLists.txt  chrono.cpp
src/coverage/: README.md
src/coverage/exe/: CMakeLists.txt  main.cpp
src/coverage/lib/: CMakeLists.txt  foo.cpp  foo.h
src/coverage/scripts/: generate_exe_html_output.sh  generate_lib_html_output.sh
src/delete_vectors_and_lists/: CMakeLists.txt  main.cpp
src/exceptions/: CMakeLists.txt  main.cpp  myclass.h  myexception.h  myexception2.h
src/function_pointer/: CMakeLists.txt  first.cpp
src/function_pointer/01_simple/: CMakeLists.txt  simple.cpp
src/function_pointer/02_in_qsort/: CMakeLists.txt  in_qsort.cpp
src/function_pointer/02_pointer_to_member_function/: CMakeLists.txt  pointer_to_member_function.cpp
src/function_pointer/03_passing2function/: CMakeLists.txt  main.cpp
src/function_pointer/04_c++11_std_function/: CMakeLists.txt  main.cpp
src/function_pointer/05_c++98_&_11_examples/: main.cpp
src/function_pointer/05_more_examples/: CMakeLists.txt  main.cpp
src/function_pointer/third/: CMakeLists.txt  main.cpp
src/functors/: example1.cpp  example2.cpp
src/gettext/: info.txt  main.cpp  test_i18n.pot  test_spanish.po
src/grpc/: README.md
src/interfaces/: Makefile  hmi.h  icommand.h  main.cpp  process.h  system_coordinator.h
src/lambda/: CMakeLists.txt  lambda.cpp
src/overcoming-name-clashes-in-multiple-interfaces/: README.md
src/overcoming-name-clashes-in-multiple-interfaces/interfaces/: CMakeLists.txt  Makefile  icommand.h  process.h  system_coordinator.cpp
src/overcoming-name-clashes-in-multiple-interfaces/ports/: CMakeLists.txt  icontroller.h  main.cpp
src/patterns/pipes-and-filters/: CMakeLists.txt  main.cpp
src/ports/: CMakeLists.txt  Makefile  hmi.h  icommand.h  main.cpp  process.h  system_coordinator.cpp  system_coordinator.h
src/ptr_vector/: main.cpp
src/return-several-values-and-structured-bindings/: CMakeLists.txt
src/template-map/: CMakeLists.txt  ifacetype.cpp  ifacetype.h  main.cpp  template-map.pro  typea.cpp  typea.h  typeb.cpp  typeb.h  writer.h
src/template-metaprogramming/: main.cpp
src/templates/: template-inheritance.cpp  template.cpp
src/templates/template-scope-resolution/: CMakeLists.txt  template.cpp
src/word-converter/: CMakeLists.txt  README.md  WordConverter.cpp  WordConverter.h  inputfile.txt  main.cpp  outputfile.txt
(+27 files in other folders)
