add_subdirectory(bind)
add_subdirectory(bind1st_2nd)
add_subdirectory(bits)
add_subdirectory(boost)
add_subdirectory(c11-callbacks)
add_subdirectory(c11-final-specifier)
add_subdirectory(c11-static-assert)
add_subdirectory(c11-std-async)
add_subdirectory(c11-variadic-templates)
add_subdirectory(c17-filesystem)
add_subdirectory(c17-std-any)
add_subdirectory(c20-concepts)
add_subdirectory(callbacks)
add_subdirectory(chrono)

add_executable(ascii ascii.cpp)
add_executable(bool bool.cpp)
add_executable(char char.cpp)
add_executable(double double.cpp)
add_executable(endianess endianness.cpp)
add_executable(exception_div_0 exception_div_0.cpp)
add_executable(interface interface.cpp)
add_executable(ip-address-int ip-address-int.cpp)
add_executable(istream-get istream-get.cpp)
add_executable(list_and_maps list_and_maps.cpp)
add_executable(list list.cpp)
add_executable(lopps loops.cpp)
add_executable(map2 map2.cpp)
add_executable(map3 map3.cpp)
add_executable(map4 map4_copy.cpp)
add_executable(map map.cpp)
add_executable(memory memory.cpp)
add_executable(memoryleak memoryleak.cpp)
add_executable(namespace namespace.cpp)
add_executable(numbers numbers.cpp)
add_executable(output output.cpp)
add_executable(pointers pointers.cpp)
add_executable(sizeof sizeof.cpp)
add_executable(sizes sizes.cpp)
add_executable(sort sort.cpp)
add_executable(strings strings.cpp)
add_executable(switch_case switch_case.cpp)
add_executable(time_conversion time_conversion.cpp)
add_executable(time time.cpp)
add_executable(vector vector.cpp)
add_executable(what what.cpp)