add_executable(bitset-memcpy-big-little-endian bitset-memcpy-big-little-endian.cpp)
add_executable(ones-complement ones-complement.cpp)
add_executable(packing-unpacking-float packing-unpacking-float.cpp)
add_executable(unsignedshort-to-2-bytes unsignedshort-to-2-bytes.cpp)

add_subdirectory(pack-unpack-data)
